--- a/src/html/snippets/button.html
+++ b/src/html/snippets/button.html
@@ -1,1 +1,3 @@
-<button class="snippet">snippet</button>
+<button class="button" type="button">
+  <span class="button__text"> Смотреть ещё </span>
+</button>
