fix filter and section  search-events

--- a/src/html/snippets/search-card.html
+++ b/src/html/snippets/search-card.html
@@ -3,7 +3,7 @@
     <picture class="search-events__card-picture">
       <source srcset="../../img/img-card.png 1x, ../../img/img-card.png 2x" />
       <img
-        class=".search-events__card-img"
+        class="search-events__card-img"
         alt=""
         loading="lazy"
         src="../../img/img-card.png"
